<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/crud"
        android:icon="@drawable/ic_perm_data_setting_black_24dp"
        android:orderInCategory="100"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/info"
        app:showAsAction="always" />


    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />

      <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
</menu>
